src/objects/Zuora__PaymentGateway__c.object
<CustomObject>
    <fields>
        <fullName>Zuora__EntityID__c</fullName>
        <label>Entity ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Zuora__IsActive__c</fullName>
        <label>IsActive</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__IsDefault__c</fullName>
        <label>IsDefault</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__IsTest__c</fullName>
        <label>IsTest</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__PaymentGatewayFullName__c</fullName>
        <label>PaymentGateway Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Payment Gateway</label>
    <nameField>
        <label>PaymentGateway Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Gateways</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>